<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">
    <string name="show_password">Show password</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="view_image">View Image</string>
    <string name="annotate_image">Annotate Image</string>
    <string name="signature_capture">Signature Capture</string>
    <string name="view_video">View Video</string>
    <string name="choose_audio">Choose Audio</string>
    <string name="add_repeat_question">Add \"%s\"?</string>
    <string name="add_repeat">Add</string>
    <string name="dont_add_repeat">Do not add</string>
    <string name="add_another_menu">Add another</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="canceling">Canceling</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as finalized. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_osm">Launch OpenMapKit</string>
    <string name="recapture_osm">Redo OSM Tagging</string>
    <string name="capture_video">Record Video</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">ODK Password</string>
    <string name="change_username">ODK Username</string>
    <string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
    <string name="clear_answer">Remove response</string>
    <string name="clear_answer_ask">Remove This Response?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="data">Saved Forms</string>
    <string name="data_saved_error">Sorry, form save failed!</string>
    <string name="data_saved_ok">Form successfully saved!</string>
    <string name="save_point_error">Error saving recovery point: %s</string>
    <string name="default_completed">Default to finalized</string>
    <string name="default_completed_summary">Mark form as finalized by default</string>
    <string name="delete_confirm">Delete %s form(s)?</string>
    <string name="delete_file">Delete Selected</string>
    <string name="delete_no">Do Not Delete</string>
    <string name="delete_repeat">Remove group</string>
    <string name="delete_repeat_ask">Remove This Group?</string>
    <string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
    <string name="delete_repeat_no">Cancel</string>
    <string name="delete_yes">Delete Forms</string>
    <string name="discard_answer">Remove response</string>
    <string name="discard_group">Remove group</string>
    <string name="download">Get Selected</string>
    <string name="download_forms_result">Download Results</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">Cancel</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="enter_data">Fill Blank Form</string>
    <string name="enter_data_button">Fill Blank Form</string>
    <string name="error_occured">Error Occurred</string>
    <string name="error_attaching_binary_file">An error occurred while attaching the media: %s</string>
    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
    <string name="file_deleted_ok">%s form(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
    <string name="forms">Blank Forms</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_barcode">Get Barcode</string>
    <string name="get_forms">Get Blank Form</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="invalid_space_in_answer_singular">Warning: underlying value %s has spaces</string>
    <string name="invalid_space_in_answer_plural">Warning: underlying values %s have spaces</string>
    <string name="jump_to_beginning">Go To Start</string>
    <string name="jump_to_end">Go To End</string>
    <string name="jump_to_previous">Go Up</string>
    <string name="list_failed_with_error">Form listing failed. %s.</string>
    <string name="loading_form">Loading Form</string>
    <string name="load_remote_form_error">Error Getting Form List</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %1$s m</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_details">Data collection made easier…</string>
    <string name="manage_files">Delete Saved Form</string>
    <string name="mark_finished">Mark form as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any forms!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
    <string name="no_items_display_sent_forms">Nothing available to display.\n\nTry sending finalized forms before viewing.</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="play_video">Play Video</string>
    <string name="review_data">Edit Saved Form</string>
    <string name="save_all_answers">Save Form</string>
    <string name="send_data">Send Finalized Form</string>
    <string name="view_sent_forms">View Sent Form</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Server Settings</string>
    <string name="username">Username</string>
    <string name="view_hierarchy">Go To Prompt</string>
    <string name="general_preferences">General Settings</string>
    <string name="client">User interface</string>
    <string name="change_formlist_url">Form list path (appended to URL)</string>
    <string name="change_submission_url">Submission path (appended to URL)</string>
    <string name="formlist_url">Form list path</string>
    <string name="submission_url">Submission path</string>
    <string name="font_size">Text font size</string>
    <string name="change_font_size">Text font size</string>
    <string name="choose_video">Choose Video</string>
    <string name="selected_google_account_text">Google account</string>
    <string name="admin_preferences">Admin Settings</string>
    <string name="admin_access_settings">Tap for admin access to settings</string>
    <string name="autosend">Auto send</string>
    <string name="found_in_main">Uncheck to hide from Main Menu</string>
    <string name="found_in_settings">Uncheck to hide from General Settings</string>
    <string name="navigation">Navigation</string>
    <string name="constraint_behavior">Constraint processing behavior</string>
    <string name="high_resolution_summary">Enable high-resolution video recordings</string>
    <string name="aggregate_preferences">ODK Aggregate settings</string>
    <string name="sms_submission_preferences">SMS submission settings</string>
    <string name="submission_transport">Submission transport (advanced)</string>
    <string name="submission_transport_types_title">Send submissions via</string>
    <string name="other_preferences">Other platform settings</string>
    <string name="google_preferences">Google Sheets settings</string>
    <string name="delete_after_send">Delete after send</string>
    <string name="delete_after_send_summary">Deletes finalized forms and media after sending to server</string>
    <string name="change_server_url">Server URL</string>
    <string name="google_sheets_url">Fallback submission URL</string>
    <string name="tell_your_friends">Share ODK Collect</string>
    <string name="leave_a_review">Leave a Play Store review</string>
    <string name="maps">Maps</string>
    <string name="basemap">Basemap</string>
    <string name="layer_data_file">Layer data file</string>
    <string name="odk_website">Visit the ODK website</string>
    <string name="odk_website_summary">Open Data Kit (ODK) is used to collect data for social good in challenging environments.</string>
    <string name="odk_forum">Join the ODK forum</string>
    <string name="odk_forum_summary">Join the forum to get support, request features, contribute code/translations! </string>
    <string name="all_open_source_licenses">Open source libraries/licenses</string>
    <string name="analytics_preferences">Usage data</string>
    <string name="analytics">Collect anonymous usage data</string>
    <string name="analytics_summary">Anonymous usage data helps the ODK team prioritize fixes and features</string>
    <string name="instance_sync">Finalize forms on import</string>
    <string name="instance_sync_summary">Affects forms added directly to instances folder.</string>
    <string name="language">Language</string>
    <string name="form_metadata">Form metadata</string>
    <string name="form_metadata_summary">These values will be added to forms that have username, email and/or telephone preloaded fields to identify the person submitting data.</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email address</string>
    <string name="user_defined">User-defined</string>
    <string name="device_defined">Device-defined</string>
    <string name="device_id">Device ID</string>
    <string name="subscriber_id">Subscriber ID</string>
    <string name="sim_serial_id">SIM serial number</string>
    <string name="server_password">Server Password</string>
    <string name="form_entry_setting">Form Entry Settings</string>
    <string name="form_entry_settings_summary">Tap to manage form entry items</string>
    <string name="user_settings">User Settings</string>
    <string name="user_setting_summary">Tap to manage general settings items</string>
    <string name="main_menu_settings">Main Menu Settings</string>
    <string name="main_menu_settings_summary">Tap to manage main menu items</string>
    <string name="user_access_control">User Access Control</string>
    <string name="autosend_selector_title">Auto send</string>
    <string name="form_management_preferences">Form management</string>
    <string name="form_submission_category">Form submission</string>
    <string name="form_filling_category">Form filling</string>
    <string name="high_resolution_title">High res video</string>
    <string name="image_size_title">Image size</string>
    <string name="form_import_category">Form import</string>
    <string name="user_and_device_identity_title">User and device identity</string>
    <string name="constraint_behavior_title">Constraint processing</string>
    <string name="show_splash_title">Splash screen</string>
    <string name="server_settings_title">Server</string>
    <string name="server">Server</string>
    <string name="image_size_dialog_title">Maximum pixels of the long edge of the image</string>
    <string name="app_theme">Theme</string>
    <string name="sms_pref_dialog_title">Destination phone number</string>
    <string name="sms_pref_title">Destination phone number</string>
</resources>