<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="form_submission"
        android:title="@string/form_submission_category">
        <ListPreference
            android:dialogTitle="@string/autosend_selector_title"
            android:entries="@array/autosend_selector_entries"
            android:entryValues="@array/autosend_selector_entries_values"
            android:key="autosend"
            android:title="@string/autosend" />
        <CheckBoxPreference
            android:key="delete_send"
            android:summary="@string/delete_after_send_summary"
            android:title="@string/delete_after_send" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="form_filling"
        android:title="@string/form_filling_category">
        <CheckBoxPreference
            android:key="default_completed"
            android:summary="@string/default_completed_summary"
            android:title="@string/default_completed" />
        <ListPreference
            android:dialogTitle="@string/constraint_behavior"
            android:entries="@array/constraint_behavior_entries"
            android:entryValues="@array/constraint_behavior_entry_values"
            android:key="constraint_behavior"
            android:title="@string/constraint_behavior_title" />
        <CheckBoxPreference
            android:key="high_resolution"
            android:summary="@string/high_resolution_summary"
            android:title="@string/high_resolution_title" />
        <ListPreference
            android:dialogTitle="@string/image_size_dialog_title"
            android:entries="@array/image_size_entries"
            android:entryValues="@array/image_size_entry_values"
            android:key="image_size"
            android:title="@string/image_size_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="form_import"
        android:title="@string/form_import_category">
        <CheckBoxPreference
            android:key="instance_sync"
            android:summary="@string/instance_sync_summary"
            android:title="@string/instance_sync" />
    </PreferenceCategory>
</PreferenceScreen>