<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/server_preferences"
        android:title="@string/aggregate_preferences">
        <EditTextPreference
            android:dialogTitle="@string/change_server_url"
            android:inputType="textNoSuggestions"
            android:key="server_url"
            android:title="@string/server_url" />
        <EditTextPreference
            android:dialogTitle="@string/change_username"
            android:inputType="textNoSuggestions"
            android:key="username"
            android:title="@string/username" />
        <EditTextPreference
            android:dialogTitle="@string/change_password"
            android:inputType="textPassword"
            android:key="password"
            android:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/submission_transport"
        android:title="@string/submission_transport">
        <ListPreference
            android:dialogTitle="@string/submission_transport_types_title"
            android:entries="@array/transport_type_entries"
            android:entryValues="@array/transport_type_entry_values"
            android:key="submission_transport_type"
            android:title="@string/submission_transport_types_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/sms_submission_preferences"
        android:title="@string/sms_submission_preferences">
        <EditTextPreference
            android:dialogTitle="@string/sms_pref_dialog_title"
            android:inputType="phone"
            android:key="sms_gateway"
            android:title="@string/sms_pref_title" />
    </PreferenceCategory>
</PreferenceScreen>