<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:id="@+id/odk_website"
        android:icon="@drawable/ic_website"
        android:summary="@string/odk_website_summary"
        android:title="@string/odk_website" />
    <header
        android:id="@+id/odk_forum"
        android:icon="@drawable/ic_forum"
        android:summary="@string/odk_forum_summary"
        android:title="@string/odk_forum" />
    <header
        android:id="@+id/tell_your_friends"
        android:icon="@drawable/ic_share"
        android:title="@string/tell_your_friends" />
    <header
        android:id="@+id/leave_a_review"
        android:icon="@drawable/ic_review_rate"
        android:title="@string/leave_a_review" />
    <header
        android:id="@+id/open_source_licenses"
        android:icon="@drawable/ic_stars"
        android:title="@string/all_open_source_licenses" />

</preference-headers>