<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/user_and_device_identity_title">

    <Preference
        android:key="form_metadata"
        android:summary="@string/form_metadata_summary"
        android:title="@string/form_metadata"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />

    <PreferenceCategory
        android:key="usage_data"
        android:title="@string/analytics_preferences"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:key="analytics"
            android:summary="@string/analytics_summary"
            android:title="@string/analytics"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>