<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/found_in_main">
        <CheckBoxPreference
            android:id="@+id/edit_saved"
            android:defaultValue="true"
            android:key="edit_saved"
            android:title="@string/review_data" />
        <CheckBoxPreference
            android:id="@+id/send_finalized"
            android:defaultValue="true"
            android:key="send_finalized"
            android:title="@string/send_data" />
        <CheckBoxPreference
            android:id="@+id/view_sent"
            android:defaultValue="true"
            android:key="view_sent"
            android:title="@string/view_sent_forms" />
        <CheckBoxPreference
            android:id="@+id/get_blank"
            android:defaultValue="true"
            android:key="get_blank"
            android:title="@string/get_forms" />
        <CheckBoxPreference
            android:id="@+id/delete_saved"
            android:defaultValue="true"
            android:key="delete_saved"
            android:title="@string/manage_files" />
    </PreferenceCategory>
</PreferenceScreen>