<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/maps">

    <PreferenceCategory
        android:key="category_basemap"
        android:title="@string/basemap"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        android:key="category_reference_layer"
        android:title="@string/offline_layer"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <Preference
            android:key="reference_layer"
            android:title="@string/layer_data_file"
            android:dialogTitle="@string/offline_layer_dialog_title"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/ok"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
