<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2017 Shobhit Licensed under the Apache
  License, Version 2.0 (the "License"); you may not use this file except in
  compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software distributed
  under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  OR CONDITIONS OF ANY KIND, either express or implied. See the License for
  the specific language governing permissions and limitations under the License.
-->
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- tools:ignore="AlwaysShowAction" due to #1154 on small screen action is more important
    than title-->
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save_all_answers"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/menu_goto"
        android:icon="@drawable/ic_menu_goto"
        android:title="@string/view_hierarchy"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_languages"
        android:title="@string/change_language"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_preferences"
        android:title="@string/general_preferences"
        app:showAsAction="never"/>

</menu>